fix#5 input styling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type='text'],
-input[type='button'],
-input[type='submit'] {
+.input {
   -webkit-border-radius: 0;
-}
-
-@layer components {
-  .input {
-    @apply w-64 p-2 rounded-l-lg bg-slate-800 focus:outline-none text-slate-200 placeholder:text-slate-500;
-  }
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
